# Uni-NaVid

./: DOCKER_README.md  Dockerfile  Dockerfile(real-sense)  Dockerfile_with_realsense  README.md  collect_data.sh  debug.md  debug2.md  docker_build.sh  docker_exec.sh  docker_run.sh  extract_images.py  hint_task_run_command.md  launch_realsense.sh  offline_eval_uninavid.py  online_eval_remote_control.py  online_eval_uninavid.py  online_eval_uninavid_ros2_nonblocking_v4.py  pyproject.toml  requirements.docker.txt  robot_calibration_controller.py  robot_control.py  scout_launch.py  scout_teleop.py  setup_korean_input.sh
Real_test_output/: step_log.jsonl
scripts/: uninavid_stage_1.sh  uninavid_stage_2.sh
test_cases/vln_1/: DS_Store  instruction.json
uninavid/model/: builder.py  uninavid_arch.py
uninavid/model/language_model/: llava_llama_vid.py
